2003-11-29  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b44

	* Fixed a bug in classes/Album.php where we were incrementing the
	  serial number on every album save, thanks to Quentin Smith.

2003-11-29  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b43

	* Fixed bug were reset clicks did not work in albums.php (bug found
	  by Nick Rembis).

	* Commenter name format is configurable.

	* Fixed bug were top navbox was missing a line (or had it double 
	  thickness) in view_photo.php when there was no adminbox (bug found
	  by Sevein). 

	* Removed setup/.htaccess from manifest.

2003-11-28 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b42

	* Bugfix: poll_results.php contained blank line in header 
		  which causes warning when embedded.

	* Bugfix: result bar image was not displayed when embedded,
		  because $GALLERY_BASEDIR was not used.

2003-11-28 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b41

	* Bugfix: trim strings got from language files in emulate_gettext().
		  This fixes non working multilanguage on nongettext systems.

2003-11-28  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b40

	* Update php_value template to use php_value on Apache2 and
	  php_flag on Apache1 to get around a bug in Apache2.

2003-11-27  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b39

	* Poll properties can now be applied recursively.

2003-11-27 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b38

	* Change: Wording in configdata.

2003-11-27  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b37

	* Turn on error display (if off) in devMode.

	* Fixed incorrect warning in check_mail.php under windows.

	* Colour of font changed in redmarble skin.

2003-11-26 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b36

	* Change: Removed debug code.

2003-11-26 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b35

	* Bugfix: "get rid of resized" didnt work if translated button label
		  contained htmlentities.

2003-11-25 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b34
